force-app/main/default/objects/Performance_Scoreboard__c/Performance_Scoreboard__c.object-meta.xml
<CustomObject>
    <description>To track performance of Partner on yearly basis</description>
    <label>Performance Scoreboard</label>
    <nameField>
        <label>Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Scoreboard</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>