force-app/main/default/objects/Performance_Scoreboard__c/fields/As_of_orders__c.field-meta.xml
<CustomField>
    <fullName>As_of_orders__c</fullName>
    <description>Date the order performance results shown are through.</description>
    <inlineHelpText>Date the order performance results shown are through.</inlineHelpText>
    <label>As of 1</label>
    <type>Date</type>
</CustomField>