force-app/main/default/objects/Performance_Scoreboard__c/fields/As_of_RET_Rev__c.field-meta.xml
<CustomField>
    <fullName>As_of_RET_Rev__c</fullName>
    <description>As of date for Retail revenue data.</description>
    <inlineHelpText>As of date for Retail revenue data.</inlineHelpText>
    <label>RET Revenue Performance As of</label>
    <type>Date</type>
</CustomField>