force-app/main/default/objects/Performance_Scoreboard__c/fields/As_of_Serv_ord__c.field-meta.xml
<CustomField>
    <fullName>As_of_Serv_ord__c</fullName>
    <description>As of date for Services order data.</description>
    <inlineHelpText>As of date for Services order data.</inlineHelpText>
    <label>Services Order Performance As of</label>
    <type>Date</type>
</CustomField>