force-app/main/default/objects/Performance_Scoreboard__c/fields/As_of_Total__c.field-meta.xml
<CustomField>
    <fullName>As_of_Total__c</fullName>
    <label>Total Order Performance As of</label>
    <type>Date</type>
</CustomField>