force-app/main/default/objects/Performance_Scoreboard__c/fields/ATM_Q3_Orders__c.field-meta.xml
<CustomField>
    <fullName>ATM_Q3_Orders__c</fullName>
    <description>Q3 ATM orders</description>
    <label>ATM Q3 Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>