force-app/main/default/objects/Performance_Scoreboard__c/fields/ATM_Q4_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ATM_Q4_Revenue__c</fullName>
    <description>Q4 ATM Revenue</description>
    <label>ATM Q4 Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>