force-app/main/default/objects/Performance_Scoreboard__c/fields/Blank1__c.field-meta.xml
<CustomField>
    <fullName>Blank1__c</fullName>
    <label>.</label>
    <length>1</length>
    <type>Text</type>
</CustomField>