force-app/main/default/objects/Performance_Scoreboard__c/fields/Blank2__c.field-meta.xml
<CustomField>
    <fullName>Blank2__c</fullName>
    <label>.</label>
    <length>2</length>
    <type>Text</type>
</CustomField>