force-app/main/default/objects/Performance_Scoreboard__c/fields/Cons_Order_Attain__c.field-meta.xml
<CustomField>
    <fullName>Cons_Order_Attain__c</fullName>
    <formula>If ( Cons_Order_Obj__c &gt;0,Cons_Orders_Ach__c / Cons_Order_Obj__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPS Orders Attainment %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>