force-app/main/default/objects/Performance_Scoreboard__c/fields/Cons_Orders_Ach__c.field-meta.xml
<CustomField>
    <fullName>Cons_Orders_Ach__c</fullName>
    <label>IPS Orders Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>