force-app/main/default/objects/Performance_Scoreboard__c/fields/Cons_Rev_Ach__c.field-meta.xml
<CustomField>
    <fullName>Cons_Rev_Ach__c</fullName>
    <label>IPS Revenue Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>