force-app/main/default/objects/Performance_Scoreboard__c/fields/Cons_Rev_Attain__c.field-meta.xml
<CustomField>
    <fullName>Cons_Rev_Attain__c</fullName>
    <formula>IF( Cons_Rev_Obj__c &gt; 0, Cons_Rev_Ach__c / Cons_Rev_Obj__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPS Revenue Attainment %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>