force-app/main/default/objects/Performance_Scoreboard__c/fields/Cons_Rev_Obj__c.field-meta.xml
<CustomField>
    <fullName>Cons_Rev_Obj__c</fullName>
    <label>IPS Revenue Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>