force-app/main/default/objects/Performance_Scoreboard__c/fields/Fin_ATM_Order_Obj__c.field-meta.xml
<CustomField>
    <fullName>Fin_ATM_Order_Obj__c</fullName>
    <description>Annual objective for Financial ATM solutions</description>
    <label>ATM Order Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>