force-app/main/default/objects/Performance_Scoreboard__c/fields/FIN_Pymt_Sol_Rev_Obj__c.field-meta.xml
<CustomField>
    <fullName>FIN_Pymt_Sol_Rev_Obj__c</fullName>
    <label>Pymt Sol Revenue Objective</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>