force-app/main/default/objects/Performance_Scoreboard__c/fields/Objective_Details__c.field-meta.xml
<CustomField>
    <fullName>Objective_Details__c</fullName>
    <label>Objective Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>