force-app/main/default/objects/Performance_Scoreboard__c/fields/Order_Ach__c.field-meta.xml
<CustomField>
    <fullName>Order_Ach__c</fullName>
    <label>Orders Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>