force-app/main/default/objects/Performance_Scoreboard__c/fields/Order_Attain__c.field-meta.xml
<CustomField>
    <fullName>Order_Attain__c</fullName>
    <description>Percentage order attainment (actual/objective)</description>
    <formula>IF( Order_Obj__c &gt; 0, Order_Ach__c / Order_Obj__c, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Attainment %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>