force-app/main/default/objects/Performance_Scoreboard__c/fields/Order_Obj__c.field-meta.xml
<CustomField>
    <fullName>Order_Obj__c</fullName>
    <label>Order Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>