force-app/main/default/objects/Performance_Scoreboard__c/fields/Pymt_Sol_Order_Ach__c.field-meta.xml
<CustomField>
    <fullName>Pymt_Sol_Order_Ach__c</fullName>
    <label>Pymt Sol Orders Achieved</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>