force-app/main/default/objects/Performance_Scoreboard__c/fields/Pymt_Sol_Q1_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Pymt_Sol_Q1_Revenue__c</fullName>
    <description>Q1 Payment Solutions Revenue</description>
    <label>Pymt Sol Q1 Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>