force-app/main/default/objects/Performance_Scoreboard__c/fields/Pymt_Sol_Q3_Orders__c.field-meta.xml
<CustomField>
    <fullName>Pymt_Sol_Q3_Orders__c</fullName>
    <description>Q3 Payment Solutions orders</description>
    <label>Pymt Sol Q3 Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>