force-app/main/default/objects/Performance_Scoreboard__c/fields/Q3_Aptra_SW_Plan__c.field-meta.xml
<CustomField>
    <fullName>Q3_Aptra_SW_Plan__c</fullName>
    <label>Q3 Aptra SW Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>