force-app/main/default/objects/Performance_Scoreboard__c/fields/Q4_Aptra_SW_Actual__c.field-meta.xml
<CustomField>
    <fullName>Q4_Aptra_SW_Actual__c</fullName>
    <label>Q4 Aptra SW Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>