force-app/main/default/objects/Performance_Scoreboard__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>CASE( Account__r.Region__c , &quot;North America&quot;, &quot;North America&quot;, &quot;CLA&quot;, &quot;CLA&quot;,&quot;Europe&quot;,&quot;Europe&quot;,&quot;MEA&quot;,&quot;MEA&quot;,&quot;AP North&quot;,&quot;AP North&quot;,&quot;AP South&quot;,&quot;AP South&quot;,&quot;Unknown&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>