force-app/main/default/objects/Performance_Scoreboard__c/fields/RET_Revenue_Achieved__c.field-meta.xml
<CustomField>
    <fullName>RET_Revenue_Achieved__c</fullName>
    <label>RET Revenue Achieved</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>