force-app/main/default/objects/Performance_Scoreboard__c/fields/Retail_Q3_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Retail_Q3_Revenue__c</fullName>
    <description>Q3 Retail Revenue</description>
    <label>Retail Q3 Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>