force-app/main/default/objects/Performance_Scoreboard__c/fields/Retail_Q4_Orders__c.field-meta.xml
<CustomField>
    <fullName>Retail_Q4_Orders__c</fullName>
    <description>Q4 Retail Orders</description>
    <label>Retail Q4 Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>