force-app/main/default/objects/Performance_Scoreboard__c/fields/Revenue_Attain__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Attain__c</fullName>
    <formula>IF (Revenue_Obj__c &gt; 0, Revenue_Act__c  /  Revenue_Obj__c, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Attainment %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>