force-app/main/default/objects/Performance_Scoreboard__c/fields/Serv_Rev_Ach__c.field-meta.xml
<CustomField>
    <fullName>Serv_Rev_Ach__c</fullName>
    <description>Services revenue achieved as of the date specified, i.e. parts, subscription fees, etc.</description>
    <inlineHelpText>Services revenue achieved as of the date specified, i.e. parts, subscription fees, etc.</inlineHelpText>
    <label>Services Revenue Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>