force-app/main/default/objects/Performance_Scoreboard__c/fields/Serv_Rev_Obj__c.field-meta.xml
<CustomField>
    <fullName>Serv_Rev_Obj__c</fullName>
    <description>Revenue objective for services, i.e. parts, subscription fees, etc.</description>
    <inlineHelpText>Revenue objective for services, i.e. parts, subscription fees, etc.</inlineHelpText>
    <label>Services Revenue Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>