force-app/main/default/objects/Performance_Scoreboard__c/fields/Services_Order_Attain__c.field-meta.xml
<CustomField>
    <fullName>Services_Order_Attain__c</fullName>
    <description>% of Services orders attained against objective as of the date specified.</description>
    <formula>IF( Services_Order_Obj__c &gt;0, Services_Orders_Ach__c / Services_Order_Obj__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% of Services orders attained against objective as of the date specified.</inlineHelpText>
    <label>Services Order Attainment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>