force-app/main/default/objects/Performance_Scoreboard__c/fields/Services_Order_Obj__c.field-meta.xml
<CustomField>
    <fullName>Services_Order_Obj__c</fullName>
    <description>Order objective for services, i.e. parts, subscription fees, etc.</description>
    <inlineHelpText>Order objective for services, i.e. parts, subscription fees, etc.</inlineHelpText>
    <label>Services Order Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>