force-app/main/default/objects/Performance_Scoreboard__c/fields/Services_Orders_Ach__c.field-meta.xml
<CustomField>
    <fullName>Services_Orders_Ach__c</fullName>
    <description>Services orders submitted as of the date specified, i.e. parts, subscription fees, etc.</description>
    <inlineHelpText>Services orders submitted as of the date specified, i.e. parts, subscription fees, etc.</inlineHelpText>
    <label>Services Orders Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>