force-app/main/default/objects/Performance_Scoreboard__c/fields/Sol_CoD__c.field-meta.xml
<CustomField>
    <fullName>Sol_CoD__c</fullName>
    <formula>Sol_CoD_Qual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sol CoD Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>