force-app/main/default/objects/Performance_Scoreboard__c/fields/Sol_CoE_Qual__c.field-meta.xml
<CustomField>
    <fullName>Sol_CoE_Qual__c</fullName>
    <formula>IF( OR(AND( Sol_Reward__c  = &quot;CoE&quot;,   Revenue_Attain__c  &gt;= 1.1),(AND(Sol_Reward__c  = &quot;CoE&quot;,  Order_Attain__c  &gt;= 1.1))),1,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution CoE Qualifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>