force-app/main/default/objects/Performance_Scoreboard__c/fields/Sol_Reward__c.field-meta.xml
<CustomField>
    <fullName>Sol_Reward__c</fullName>
    <formula>IF(AND(Order_Obj__c &gt;250000, Order_Obj__c &lt;1000000),&quot;CoE&quot;,IF( Order_Obj__c &gt;= 1000000,&quot;CoD&quot;,IF(AND(Revenue_Obj__c &gt;250000, Revenue_Obj__c &lt;1000000),&quot;CoE&quot;,IF(Revenue_Obj__c &gt;=1000000,&quot;CoD&quot;,&quot;Not Eligible&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Reward Program Eligibility</label>
    <type>Text</type>
</CustomField>