force-app/main/default/objects/Performance_Scoreboard__c/fields/Sol_Reward_Attain__c.field-meta.xml
<CustomField>
    <fullName>Sol_Reward_Attain__c</fullName>
    <formula>Order_Ach__c  /    Order_Obj__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Reward Program Attainment %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>