force-app/main/default/objects/Performance_Scoreboard__c/fields/Sol_Reward_Obj__c.field-meta.xml
<CustomField>
    <fullName>Sol_Reward_Obj__c</fullName>
    <formula>IF(Order_Obj__c &gt; 250000,Order_Obj__c  * 1.1, IF( Revenue_Obj__c &gt;250000,  Revenue_Obj__c *1.1,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Reward Program Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>