force-app/main/default/objects/Performance_Scoreboard__c/fields/TOTAL_Ord_Ach__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_Ord_Ach__c</fullName>
    <formula>Fin_ATM_Ord_Ach__c  +  Pymt_Sol_Order_Ach__c  +  RET_Orders_Achieved__c  +  Services_Orders_Ach__c  +  Cons_Orders_Ach__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL Orders Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>