force-app/main/default/objects/Performance_Scoreboard__c/fields/TOTAL_Rev_Ach__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_Rev_Ach__c</fullName>
    <formula>FIN_ATM_Revenue_Achieved__c + FIN_Pymt_Sol_Rev_Achv__c + RET_Revenue_Achieved__c + Serv_Rev_Ach__c + Cons_Rev_Ach__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL Revenue Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>