force-app/main/default/objects/Performance_Scoreboard__c/fields/YTD_Aptra_SW_Actual__c.field-meta.xml
<CustomField>
    <fullName>YTD_Aptra_SW_Actual__c</fullName>
    <formula>Q1_Aptra_SW_Actual__c  +  Q2_Aptra_SW_Actual__c  +  Q3_Aptra_SW_Actual__c  +  Q4_Aptra_SW_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Aptra SW Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>